cintilla puesta y logo

--- a/WebLegemClient/src/app/login/login.tmpl.html
+++ b/WebLegemClient/src/app/login/login.tmpl.html
@@ -1,4 +1,4 @@
-﻿<div style="background:red;height:100vh; ">
+﻿<div class="fondo_login">
     <div class="espacio_blanco"></div>
 
     <div class="contenedor_login">
@@ -52,24 +52,24 @@
             </div>
 
 
-            <a href="#" class="olvide_contraseña"> Olvide mi contraseña </a>
+            <a ui-sref="recuperar-clave" class="olvide_contraseña"> Olvide mi contraseña </a>
         </form>
     </div>
 
 
     <div class="contenedor_simbolos" >
 
-        <div style="display:flex; flex-direction:row; width:100%; justify-content:space-around;  background:rgba(0, 0, 0, 0.6);">
+        <div >
             <div>
-                <img src="recursos/escudos-logos/Logo-Acreditacion-01_blanco.png" style="height:100px;width:90px;" />
+                <img src="recursos/escudos-logos/Logo-Acreditacion-01_blanco.png"/>
             </div>
 
             <div>
-                <img src="recursos/escudos-logos/planeacion.png" style="height:100px;width:200px;" />
+                <img src="recursos/escudos-logos/planeacion.png"/>
             </div>
 
             <div>
-                <img src="recursos/escudos-logos/escudo_111_years.png" style="height:100px;width:100px;" />
+                <img src="recursos/escudos-logos/escudo_111_years.png"  />
             </div>
         </div>
     </div>
