--- a/WebLegemClient/src/css/plantillas/login.css
+++ b/WebLegemClient/src/css/plantillas/login.css
@@ -1,24 +1,16 @@
-﻿.contenedor_login{
+﻿.fondo_login{
+    min-height:100vh;
+    width:100%;
+    display:flex; 
+    flex-direction:column; 
+    background-image: url('../../recursos/header/entrada.jpg');
+    background-size: cover;
+}
+
+.contenedor_login{
     max-width:420px;
     box-shadow:0 0 0 1px rgba(0, 0, 0, 0.05),0 1px 2px rgba(0, 0, 0, 0.3);   
-}
-
-.contenedor_login:before {
-    content: '';
-    background-image: url('../../recursos/header/entrada.jpg');
-    /*background-image: url('../../recursos/índice2.png');*/
-    background-size: cover;
-    -webkit-filter: brightness(100%);
-    filter: brightness(100%);
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-}
-
-.contenedor_login > div{  
+    min-width:0;
 }
 
 .form_login{
@@ -26,11 +18,8 @@
     padding:20px;
 }
 
-.form_login > div{
-}
-    
 .olvide_contraseña{
-    padding-top:20px;
+    margin-top:20px;
     display:inline-block;
     font-family: 'OpenSans';
     font-size:small;
@@ -53,25 +42,26 @@
 /*==========  Mobile First Method  ==========*/
 
 /* Custom, iPhone Retina */ 
-@media only screen and (max-width : 320px) {
-    .form_login{
-        height:100vh;
-    }
+@media only screen and (max-width : 320px) {/* < 320*/
     .contenedor_login{
+        width:100%;
+        margin:auto;
     }
 }
 
 
-@media only screen and (min-width : 320px) {
+@media only screen and (min-width : 320px) {/* > 320*/
     .contenedor_login{
-        margin: auto;    
-        margin-top:10vh;
+        width:100%;  
+        margin:auto;
     }
 }
 
 /* Extra Small Devices, Phones */ 
 @media only screen and (min-width : 480px) {
-
+    .contenedor_login{
+        margin: auto;    
+    }
 }
 
 /* Small Devices, Tablets */
