cambios menores antes de la reunion

--- a/WebLegemClient/src/app/usuarios/cuenta/cuenta.tmpl.html
+++ b/WebLegemClient/src/app/usuarios/cuenta/cuenta.tmpl.html
@@ -4,7 +4,7 @@
 
     <div class="tapiz_contenido" ng-show="true" style="max-width:800px">
         <div class="titulo">
-            <span class="ico-user-md">
+            <span class="ico-user">
                 <a>Configuración de cuenta</a>
             </span>
         </div>
@@ -68,10 +68,7 @@
                     </div>
                 </div>
                 <!--Botonera para confirmacion de cambios-->
-                <div class="controles_box_right down">
-                    <button class="btn_con_ico" style="display:inline-block;">
-                        <span class="ico-pencil tamano_botones_1"></span>Editar
-                    </button>
+                <div class="controles_box_right down">                    
 
                     <button class="btn_con_ico" style="display:inline-block;">
                         <span class="ico-floppy-o tamano_botones_1"></span>Guardar
