--- a/WebLegemClient/src/app/gestion-documental/documento/crear-documento.tmpl.html
+++ b/WebLegemClient/src/app/gestion-documental/documento/crear-documento.tmpl.html
@@ -1,5 +1,5 @@
-﻿<div style="background:#e9eaed; min-height:100vh;">
-    <p>{{ vm.paso }}</p>
+﻿<div class="tapiz">
     <div style="height:85px;"></div>
+    <p>{{ vm.paso }}</p>
     <div ui-view class="view_gestion_documental"></div>
 </div>
