--- a/WebLegemClient/src/app/gestion-documental/documento/subir-archivo.tmpl.html
+++ b/WebLegemClient/src/app/gestion-documental/documento/subir-archivo.tmpl.html
@@ -1,7 +1,12 @@
-﻿<div class="contenido_gd animatio ng-enter" id="holas">
-    <label class="titulo">Crear Documento</label>
+﻿<div class="contenido_gd animatio ng-enter">
 
-    <div ng-controller="uploaderController as an">
+    <div class="titulo_ventana">
+        <span class="ico-file-o">
+            <p>Crear Documento</p>
+        </span>
+    </div>
+
+    <div class="box-contenido-gd" ng-controller="uploaderController as an">
         <label class="subtitulos_labels">
             Subir Documento
         </label>
@@ -15,14 +20,14 @@
                 <label id="fileSize"></label>
                 <label id="fileType"></label>
                 <input type="file" id="files" accept="*/*" nv-file-select nv-file-drop uploader="vm.uploader" />
-                
+
             </label>
             <div id="progress_bar"><div class="percent">0%</div></div>
 
             <button id="cancelar_lectura" type="button" class="btn_con_ico" ng-click="an.abortRead()">
                 <!--ng-click="vm.uploader.uploadAll()"-->
                 <span class="ico-times tamano_botones_1"></span>Cancelar
-            </button>            
+            </button>
             <br />
         </form>
 
@@ -30,6 +35,13 @@
             <button class="btn_con_ico inverso" ui-sref="gestion-documental.crear-documento.informacion-documento">
                 Siguiente<span class="ico-chevron-right tamano_botones_1 derecha"></span>
             </button>
+            <button class="btn_con_ico inverso" ui-sref="gestion-documental.crear-documento.crear-anotacion">
+                Anotacion<span class="ico-chevron-right tamano_botones_1 derecha"></span>
+            </button>
+            <button class="btn_con_ico inverso" ui-sref="gestion-documental.crear-documento.seleccionar-anotacion">
+                Existe anota<span class="ico-chevron-right tamano_botones_1 derecha"></span>
+            </button>
         </div>
     </div>
 </div>
+
