--- a/WebLegemClient/src/css/directivas/filtro_busqueda.css
+++ b/WebLegemClient/src/css/directivas/filtro_busqueda.css
@@ -24,7 +24,6 @@
         -ms-flex: 1;-webkit-flex: 1;flex: 1;    
         font-size:.9em;
         font-family:'Lato-Regular';
-        line-height:.9;
         border: 1px dotted rgba(153, 153, 153, 0.40); 
         display:flex;
         flex-direction:column;
@@ -77,6 +76,14 @@
     display:block;
     padding-top:9px;
 }
+
+.btn_search_avanzada.busqueda{
+    height:40px;
+    width:40px;
+    font-size:x-large;
+}
+
+
 /*----Fin boton para agregar----*/
 
 /*----Boton para eliminar----*/
