--- a/WebLegemClient/src/css/elementos/button.css
+++ b/WebLegemClient/src/css/elementos/button.css
@@ -35,6 +35,60 @@
     background-color: #064234;
 }
 
+/*...................................*/
+.btn_con_ico.azul{
+    background-color: #2980b9;
+}
+.btn_con_ico.azul:hover{
+    background-color: #3498db;
+}
+.btn_con_ico.azul:active{
+    background-color: #27649b;
+}
+/*...................................*/
+.btn_toggle{
+    background-color: transparent;
+    color:#666;
+    font-family:"Lato-Regular";   
+    padding:0 10px;
+    height:35px;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    border:none;
+    cursor:pointer;
+    border:solid 1px #aaa;
+}
+.btn_toggle:hover{
+    background-color: #EEEEEE;
+    box-shadow:inset 0 0 0 1px #aaa;
+}
+.btn_toggle:active{
+    background-color: #CCCCCC;
+}
+.btn_toggle.activo{
+    background-color: #EEEEEE;
+    box-shadow:inset 0 0 0 1px #aaa;
+    color:#2c77ba;
+}
+
+.btn_toggle.ico{
+    width:35px;
+    padding:0;
+    box-shadow:inset 0 0 0 1px #aaa;
+}
+.btn_toggle.ico span{
+    height:100%;
+}
+.btn_toggle.ico span:before{ 
+    font-size:x-large;
+    display:flex;
+    height:100%;
+    justify-content:center;
+    align-items:center;
+}
+
+
 /*---------------------------------*/
 .tamano_botones_1{
     background: rgba(0, 0, 0, 0.08);
@@ -85,7 +139,7 @@
 }
 
 .btn_sin_ico:hover , .btn_ico:hover {
-    background-color:  #099472;
+    background-color:  #009688;
 }
 
 .btn_sin_ico:active , .btn_ico:active{
@@ -99,7 +153,7 @@
 /*-----Btn solo Ico-----*/
 .btn_ico{    
     border:0;
-    background:#0f745b;
+    background:#00796B;
     cursor:pointer;
     min-height:35px;
     min-width:35px;
