--- a/WebLegemClient/src/css/plantillas/administracion.css
+++ b/WebLegemClient/src/css/plantillas/administracion.css
@@ -1,6 +1,7 @@
 ﻿.contenedor_administracion {
     margin: 10px 0;
     width: 90vw;
+    background:red;
     -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
     -moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
