--- a/WebLegemClient/src/css/plantillas/busqueda.css
+++ b/WebLegemClient/src/css/plantillas/busqueda.css
@@ -6,23 +6,22 @@
 
 .contenedor_filtros{
     padding:20px; 
-    box-shadow:0 0 0 1px rgba(0, 0, 0, 0.05),0 1px 2px rgba(0, 0, 0, 0.3);
     background:#fff;
 }
 
 .contenedor_filtros > p{    
-    font-family:lato-Bold;
-    color:#0f745b; 
+    font-family:lato-Regular;
+    color:#0f745b;
     font-size:large;
     margin-bottom:10px;
     padding-bottom:5px; 
     border-bottom:2px solid #0f745b;
 }
 
+.btn_buscar_avanzada{width:100%; margin-top:20px;height:35px;display:none}
 
-.contenedor_resulados_sort{
-    box-shadow:0 0 0 1px rgba(0, 0, 0, 0.05),0 1px 2px rgba(0, 0, 0, 0.3);
-    padding: 10px 0;
+.right_busqueda{
+    padding:20px; 
     background:#fff;
 }
 
@@ -39,7 +38,7 @@
      -ms-flex-direction:column; 
     -webkit-flex-direction:column;
     flex-direction:column;
-    padding:0 30px;
+    padding-right:20px;
     width:35%; 
 }
 
@@ -51,23 +50,26 @@
     -webkit-flex: 1;
     flex: 1;
     display:flex;
-    padding: 0 30px 10px 30px;
+    padding: 0 5px 10px 5px;
     width: 100%;
 }
 
+
+
+
+
 /*-----Contenedor Resultados---------*/
     
-.res_bus{
-    padding:0 50px;
+.res_bus{padding:0 50px}
+.res_bus>p{margin:10px}
+.desc_res {
+    border-bottom: 1px solid #47627d;
+    font-family: 'lato-Bold';
+    font-size: medium;
+    color:#47627d;
+    margin: 10px 0;
 }
 
-.res_bus > p{
-    margin:10px;
-    border-bottom:1px solid #bbb;
-    font-family:'lato-Regular'; 
-    font-size:medium; 
-    color:#888;"
-}
 /*-----Fin Contenedor Resultados-------------*/
 
 
@@ -75,7 +77,7 @@
 
 /*--------Mensajes Busqueda-------*/
 
-.mensaje_busqueda {
+.mensaje_busqueda{
     padding: 15px 10px;
     font-size: large;
     font-family: 'Lato-Regular';
@@ -101,7 +103,6 @@
     flex: 1;
     display: flex;
     display: -webkit-flex;
-    height: 100%;
     justify-content: center;
     align-items: center;
 }
@@ -124,16 +125,12 @@
     left:90px;
     bottom:-40px;
 }
-
-
-
-
 /*---Fin Dibujo Busqueda----------*/
 
 
 .box_input_busqueda_principal{
     display:flex;
-    margin-bottom:10px;
+    margin-right:5px;
 }
 
     .box_input_busqueda_principal div:first-child{
@@ -146,4 +143,69 @@
 
 .box_input_busqueda_principal div:last-child span:before{
     line-height:.9;
+}
+
+.box-sort-busqueda{border-bottom:1px solid #aaa;border-top:1px solid #aaa}
+
+.barra-busqueda{display:flex;margin-bottom:10px}
+.barra-busqueda>form{flex:1}
+
+
+/*Diseño responsive----------------------------------------------------------------------------*/
+
+/* Extra Small Devices, Phones */ 
+@media only screen and (max-width : 480px) {
+    .right_busqueda{padding:5px;}
+    .contenedor_filtros{padding:5px;}
+}
+
+/* Small Devices, Tablets  < 768px*/
+@media only screen and (max-width : 768px) {
+
+    .contenedor_busqueda{width:100%;}
+    .btn_buscar_avanzada{display:block}
+    
+    #busqueda_right {
+        padding: 0 5px 10px 5px;
+        width: 100%;
+        min-width:280px;
+    }
+
+    #busqueda_left{
+        position:fixed;
+        height:100vh;
+        width:100vw;
+        z-index:900; 
+        margin:0;
+        top:0;
+        display:flex;
+        align-items:center;
+        justify-content:center;
+        padding: 15px 0; 
+    }
+    
+    .contenedor_filtros{
+        position:relative;
+        width:90%   ;
+        overflow:auto;
+        z-index:910;
+    }
+
+    .res_bus{padding:0}
+
+    .opacidad-busqueda{
+    position:absolute;
+    top:0;
+    bottom:0;
+    width:100%;
+    background:black;
+    opacity:.8;
+    /*z-index:905;*/
+}
+}
+
+
+/* Medium Devices, Desktops > 768*/
+@media only screen and (min-width : 768px) {
+    
 }
