--- a/WebLegemClient/src/css/plantillas/gestion_documental.css
+++ b/WebLegemClient/src/css/plantillas/gestion_documental.css
@@ -6,13 +6,13 @@
 
 .contenido_gd{
     background:white;
-    width:90vw;
+    width:90%;
     margin:10px 0;
-    box-shadow:1px 1px 3px rgba(118, 117, 117, 0.50);
+    box-shadow:0 0 0 1px rgba(0, 0, 0, 0.05),0 1px 2px rgba(0, 0, 0, 0.3);
 }
 
-.contenido_gd > div{
-    padding:2em;
+.box-contenido-gd{
+    padding:20px;
 }
 
 .tontera {
