--- a/WebLegemClient/src/css/plantillas/usuarios.css
+++ b/WebLegemClient/src/css/plantillas/usuarios.css
@@ -216,7 +216,7 @@
   width:100%;
   height:100%;
   background-color:#000000;
-  opacity: 0.4;
+  opacity: 0.8;
 }
 .ng-modal-dialog {
   /* A centered div above the overlay with a box shadow. */
@@ -226,6 +226,7 @@
   height:auto;
   display:flex;
   flex-direction:column;
+  
    /* Default */
 
   /* Center the dialog */
@@ -239,6 +240,8 @@
   box-shadow: 0 0 6px rgba(0, 0, 0, 0.71);
 }
 .ng-modal-dialog-content {
+    max-height:80vh;
+    overflow-y:scroll;
 }
 
 .ng-modal-close {
